fix: Prevent white space in action bar

--- a/packages/instant-apps-components/src/components/instant-apps-measurement/instant-apps-measurement-tool/instant-apps-measurement-tool.scss
+++ b/packages/instant-apps-components/src/components/instant-apps-measurement/instant-apps-measurement-tool/instant-apps-measurement-tool.scss
@@ -1,6 +1,6 @@
 :host {
    .esri-measurement, .esri-coordinate-conversion{
-   width:auto;
+    min-width:300px;
    }
     .instant-apps-measurement-tool__hide{
         display:none;
