--- a/packages/instant-apps-components/src/components/instant-apps-measurement/instant-apps-measurement.scss
+++ b/packages/instant-apps-components/src/components/instant-apps-measurement/instant-apps-measurement.scss
@@ -5,7 +5,6 @@
     }
     calcite-panel{
       width:100%;
-      min-width: 300px;
     }
     .active-tool{
       --calcite-ui-foreground-1:#c7eaff;
